--- a/sdi-project3.html
+++ b/sdi-project3.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<! Test For Git and a new test agaain>
 <html>
 <head>
     <title>ADAM CARLTON :: Project 3 :: SDI 1305</title>
@@ -19,6 +18,6 @@
 <footer>
     <p>MAY 23rd 2013, ADAM CARLTON</p>
 </footer>
-<script type="text/javascript" src="project3.js"></script>
+<script type="text/javascript" src="Carlton_Adam_Project3.js"></script>
 </body>
 </html>
